# vf-crewai

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/vf_crew/: crew.py  main.py
src/vf_crew/config/: agents.yaml  tasks.yaml
src/vf_crew/tools/: __init__.py  data_validation.py  excel_export.py  excel_parser.py  metrics_calculator.py  prophet_model.py  select_top_skus.py  train_test_split.py  ts_preparation.py  visualization.py
test_script/: test_run.py
test_script/output/: summary_report.txt  test_forecasts.xlsx  validation_metrics.csv
vf_crew/data/output/: volume_forecasts_20251111_173207.xlsx
