[project]
name = "vf_crew"
version = "0.1.0"
description = "vf-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.2.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "prophet>=1.1.5",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "xlsxwriter>=3.1.9",
    "tqdm>=4.66.0",
]

[project.scripts]
vf_crew = "vf_crew.main:run"
run_crew = "vf_crew.main:run"
train = "vf_crew.main:train"
replay = "vf_crew.main:replay"
test = "vf_crew.main:test"
run_with_trigger = "vf_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
link-mode = "copy"
